--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
 
 <body>
-  <div>
+  <div class = "homepage">
+
     <!-- bootstrap navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -30,13 +31,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Internet Addiction <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page2.html">Page 2</a>
+            <a class="nav-link" href="quiz.html">Quiz</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page3.html">Page 3</a>
+            <a class="nav-link" href="page3.html">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -44,20 +45,40 @@
         </ul>
       </div>
     </nav>
+
+
+
     <div class="container">
-      <h1>Initial Webpage</h1>
-      <p><strong>Lorem</strong> ipsum dolor sit amet consectetur adipisicing elit. Labore nobis, natus dolores, alias
-        accusamus amet, minus illo aliquam quo deserunt eos neque et tempora! Non nesciunt dignissimos amet architecto
-        quia!</p>
+      <h1 id = "heading">Internet Addiction Defined:</h1>
+      <!-- Intro paragraph text -->
+      <p><br>Many addiction experts have different definitions of internet addiction. This is primarily because of how internet/gaming disorder, as of 2018, has been recently recognized by the <a href="https://www.who.int/features/qa/gaming-disorder/en/" target = "_blank">WHO (World Health Organization)</a> as a legitimate disorder. Although, it is important to keep in mind how addiction is a symptom of a larger problem, which commonly includes depression and loneliness. For this website's purposes, we will be defining addiction as such: <br><br> <em> The neglect of past customs and the replacement of an integral aspect of their life (connection, feeling of mastery) for priority of internet use.</em></p>
 
       <!-- added a tag on mufti to redirect to redirect.html -->
-      <h2>Hadif <a href="redirect.html" target="_blank">Mufti</a></h2>
-      <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipisicing elit. Delectus facilis, provident iure
-        commodi sint ab officiis non rerum saepe voluptate enim fugiat a iusto odit, reprehenderit molestias explicabo.
-        Praesentium, reprehenderit.</p>
 
-      <h3>Game Addiction</h3>
-      <p><strong>Lorem</strong>hi</p>
+      <!-- Flex container to arrange elements in css -->
+    <div id = "grid-container">
+<!-- Forms of internet addiction text -->
+      <h2>Forms:</h2>
+      <p><br>A common misconception of internet addiction is that it is the same thing as gaming addiction. Although gaming addiction is a form of internet addiction, there are many alternate forms of internet addiction. Possible forms include: <br>
+      <ul>
+        <li>Social Media Addiction</li>
+        <li>Gaming Addiction</li>
+        <li>Chatroom Addiction</li>
+        <li>Cybersex Addiction</li>
+        <li>Net Compulsion Addiction (Gambling, Shopping, etc.)</li>
+        <li>Information Seeking Addiction</li>
+        <li>Virtual Reality Addiction</li>
+      </ul></p>
+<!-- Symtpoms of internet addiction text -->
+      <h3>Symptoms:</h3>
+      <p>As previously stated, many different experts have different symptoms of internet addiction. Although, symptoms of internet addiction commonly include:<br>   <ul>
+        <li>Increased amount of time using the internet</li>
+        <li>Neglecting relationships</li>
+        <li>Grade decline</li>
+        <li>Job performance decline</li>
+        <li>Craving more time for internet use</li>
+        <li>Failiure to control behavior</li>
+      </ul></p>
       <!-- <p>
                 this is <strong>bold</strong><br>
                 this is <em>italic</em>
@@ -66,39 +87,29 @@
                         this is <strong>bold</strong><br>
                         this is <em>italic</em>
                 </p> -->
-      <br> <a href="https://www.google.com/">google.com</a>
-      <div></div>
-      <span></span>
-      <ul>
-        <li>item 1</li>
-        <li> item 2</li>
-        <li> item 3</li>
-      </ul>
-      <ol>
-        <li>item 1</li>
-        <li> item 2</li>
-      </ol>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-      <label class="form-check-label" for="exampleRadios1">
-        Default radio
-      </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-      <label class="form-check-label" for="exampleRadios2">
-        Second default radio
-      </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
-      <label class="form-check-label" for="exampleRadios3">
-        Disabled radio
-      </label>
-    </div>
+      <h4><br>Resources: </h4>
+      <p>For intensive care consider <a href="https://www.netaddictionrecovery.com/">reSTART</a>, which is an internet rehab center which can help patients suffering with more severe types of addiction.
+      <br>Addiction is impossible to overcome alone. Consider finding a therapist at sites like <a href="https://www.psychologytoday.com/us">Psychology Today</a>
+    <br>If you are suffering from depression or suicidal thoughts, please visit and call the <a href="https://suicidepreventionlifeline.org/">Suicide Hotline,</a></p>
+      <br> 
+     
+
+
+
+
+  
+  <!-- these are the images
+  <img src="pics/qt.jpg" alt="Ha" width="400" id="qt">
+  <img src="pics/cs.png" alt="po" width="400" id="cs">
+  <img src="pics/me.jpg" alt="u" width="400" id="act"> -->
+
   </div>
-  <!-- added footer (make this go at the bottom of the page in css) -->
+
+
+
+
+
+<!-- added footer (make this go at the bottom of the page in css) -->
   <footer>Hadif Mufti</footer>
 
   <!-- Added javascript file to site -->
