--- a/page3.html
+++ b/page3.html
@@ -30,13 +30,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Internet Addiction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page2.html">Page 2</a>
+            <a class="nav-link" href="quiz.html">Quiz</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page3.html">Page 3<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="page3.html">About Me<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
