First finalized version of website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Link to google fonts -- change this if you are linking different fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
   <!-- link to css page -->
   <link rel="stylesheet" href="main.css">
@@ -19,110 +19,122 @@
 </head>
 
 <body>
-  <div class = "homepage">
-
-    <!-- bootstrap navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Internet Addiction <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="quiz.html">Quiz</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page3.html">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
 
 
+  <!-- bootstrap navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Internet Addiction <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="quiz.html">Quiz</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="page3.html">About Me</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="homepage">
 
     <div class="container">
-      <h1 id = "heading">Internet Addiction Defined:</h1>
+      <h1 id="heading">Internet Addiction Defined</h1>
       <!-- Intro paragraph text -->
-      <p><br>Many addiction experts have different definitions of internet addiction. This is primarily because of how internet/gaming disorder, as of 2018, has been recently recognized by the <a href="https://www.who.int/features/qa/gaming-disorder/en/" target = "_blank">WHO (World Health Organization)</a> as a legitimate disorder. Although, it is important to keep in mind how addiction is a symptom of a larger problem, which commonly includes depression and loneliness. For this website's purposes, we will be defining addiction as such: <br><br> <em> The neglect of past customs and the replacement of an integral aspect of their life (connection, feeling of mastery) for priority of internet use.</em></p>
+      <p><br>Many addiction experts have different definitions of internet addiction. This is primarily because of how
+        internet/gaming disorder, as of 2018, has been recently recognized by the <a
+          href="https://www.who.int/features/qa/gaming-disorder/en/" target="_blank">WHO (World Health Organization)</a>
+        as a legitimate disorder. Although, it is important to keep in mind how addiction is a symptom of a larger
+        problem, which commonly includes depression and loneliness. For this website's purposes, we will be defining
+        addiction as such: <br><br> <em> The neglect of past customs and the replacement of an integral aspect of their
+          life (connection, feeling of mastery) for priority of internet use.</em></p>
 
       <!-- added a tag on mufti to redirect to redirect.html -->
 
       <!-- Flex container to arrange elements in css -->
-    <div id = "grid-container">
-<!-- Forms of internet addiction text -->
-      <h2>Forms:</h2>
-      <p><br>A common misconception of internet addiction is that it is the same thing as gaming addiction. Although gaming addiction is a form of internet addiction, there are many alternate forms of internet addiction. Possible forms include: <br>
-      <ul>
-        <li>Social Media Addiction</li>
-        <li>Gaming Addiction</li>
-        <li>Chatroom Addiction</li>
-        <li>Cybersex Addiction</li>
-        <li>Net Compulsion Addiction (Gambling, Shopping, etc.)</li>
-        <li>Information Seeking Addiction</li>
-        <li>Virtual Reality Addiction</li>
-      </ul></p>
-<!-- Symtpoms of internet addiction text -->
-      <h3>Symptoms:</h3>
-      <p>As previously stated, many different experts have different symptoms of internet addiction. Although, symptoms of internet addiction commonly include:<br>   <ul>
-        <li>Increased amount of time using the internet</li>
-        <li>Neglecting relationships</li>
-        <li>Grade decline</li>
-        <li>Job performance decline</li>
-        <li>Craving more time for internet use</li>
-        <li>Failiure to control behavior</li>
-      </ul></p>
-      <!-- <p>
+      <div id="grid-container">
+        <!-- Forms of internet addiction text -->
+        <h1>Forms of Internet Addiction</h1>
+        <p>A common misconception of internet addiction is that it is the same thing as gaming addiction. Although
+          gaming addiction is a form of internet addiction, there are many alternate forms of internet addiction.
+          Possible forms include: <br>
+          <ul>
+            <li>Social Media Addiction</li>
+            <li>Gaming Addiction</li>
+            <li>Chatroom Addiction</li>
+            <li>Cybersex Addiction</li>
+            <li>Net Compulsion Addiction (Gambling, Shopping, etc.)</li>
+            <li>Information Seeking Addiction</li>
+            <li>Virtual Reality Addiction</li>
+          </ul>
+        </p>
+        <!-- Symtpoms of internet addiction text -->
+        <h1>Symptoms</h1>
+        <p>As previously stated, many different experts have different symptoms of internet addiction. Although,
+          symptoms of internet addiction commonly include:<br>
+          <ul>
+            <li>Increased amount of time using the internet</li>
+            <li>Neglecting relationships</li>
+            <li>Grade decline</li>
+            <li>Job performance decline</li>
+            <li>Craving more time for internet use</li>
+            <li>Failiure to control behavior</li>
+          </ul>
+        </p>
+        <!-- <p>
                 this is <strong>bold</strong><br>
                 this is <em>italic</em>
                 </p> -->
-      <!-- <p>
+        <!-- <p>
                         this is <strong>bold</strong><br>
                         this is <em>italic</em>
                 </p> -->
-      <h4><br>Resources: </h4>
-      <p>For intensive care consider <a href="https://www.netaddictionrecovery.com/">reSTART</a>, which is an internet rehab center which can help patients suffering with more severe types of addiction.
-      <br>Addiction is impossible to overcome alone. Consider finding a therapist at sites like <a href="https://www.psychologytoday.com/us">Psychology Today</a>
-    <br>If you are suffering from depression or suicidal thoughts, please visit and call the <a href="https://suicidepreventionlifeline.org/">Suicide Hotline,</a></p>
-      <br> 
-     
+        <h1>Resources</h1>
+        <p>For intensive care consider <a href="https://www.netaddictionrecovery.com/">reSTART</a>, an internet rehab
+          center which can help patients suffering with more severe types of addiction.
+          <br><br>Addiction is impossible to overcome alone. Consider finding a therapist at sites like <a
+            href="https://www.psychologytoday.com/us">Psychology Today</a>
+          <br><br>If you are suffering from depression or suicidal thoughts, please visit and call the <a
+            href="https://suicidepreventionlifeline.org/">Suicide Hotline,</a></p>
+        <br>
 
 
 
 
-  
-  <!-- these are the images
+
+
+        <!-- these are the images
   <img src="pics/qt.jpg" alt="Ha" width="400" id="qt">
   <img src="pics/cs.png" alt="po" width="400" id="cs">
   <img src="pics/me.jpg" alt="u" width="400" id="act"> -->
 
-  </div>
+      </div>
 
 
 
 
 
-<!-- added footer (make this go at the bottom of the page in css) -->
-  <footer>Hadif Mufti</footer>
+      <!-- added footer (make this go at the bottom of the page in css) -->
+      <footer>References: <br>Demetrovics, Z., Szeredi, B., & Rózsa, S. (2008). The three-factor model of Internet addiction: The development of the<br>Problematic Internet Use Questionnaire. Behavior Research Methods, 40, 563-574.<br>reSTART. “Signs & Symptoms of Internet Gaming Addiction.” ReSTART Life | Treatment for Video Game Addiction, <br>      Internet Addiction, Phone, VR, AR, 3 Mar. 2019, www.netaddictionrecovery.com/the-problem/signs-and-<br>      symptoms.html.<br> </footer>
 
-  <!-- Added javascript file to site -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src=script.js></script>
+      <!-- Added javascript file to site -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+      <script src=script.js></script>
 </body>
 
 </html>
