--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Link to google fonts -- change this if you are linking different fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
   <!-- link to css page -->
   <link rel="stylesheet" href="main.css">
@@ -29,35 +29,55 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Internet Addiction</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="quiz.html">Quiz</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="page3.html">About Me<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+
         </ul>
       </div>
     </nav>
-   
-    <h1>Page 2</h1>
 
-  <!-- Added javascript file to site -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src=script.js></script>
+    <div class="about">
+      <p>Hi,<br>my name is Hadif Mufti. I am currently a senior at the International School
+        of Bellevue. As a tradition,
+        all graduating seniors must complete a
+        <a href=https://bsd405.org/international/about/senior-project/>Senior Project</a> based off the topic of their
+          choice, with guidance from mentors and staff. For my project, I wanted to explore internet addiction as I have
+          seen many peers struggle with balancing responsibilities like school work with video game and social media use
+          in particular. </p> <p>I wanted to be realistic, there was no way I could cure internet addiction on my own with
+          0 knowledge on addiction. So, I thought a better idea would be to create a website with information about
+          internet addiction and a quiz to see if people exhibit symptoms of internet addiction, so they can get help.</p>
+      <p>For my project, I needed to learn about addiction so I researched the psychology of it including watching
+        podcasts, readings, and a tour at <a href="https://www.netaddictionrecovery.com/">reSTART</a>. With this
+        knowledge, I then learned web development through online research including the basics of HTML, CSS, and
+        JavaScript. I created this website from scratch and without the use of third party programs that guide you through
+        the process of making a website.</p>
+      <p>Although, it must be stated that since I am NOT an addiction professional I cannot diagnose anyone. Although, the
+        information in my website is all from profesionals and is cited. </p>
+      <p>Thanks</p>
+      <p>Contact me through <a href="mailto: hadifmufti2013@gmail.com">email</a>.</p>
+    </div>
+
+
+
+
+    <!-- Added javascript file to site -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
+    <script src=script.js></script>
 </body>
 
 </html>
