--- a/quiz.html
+++ b/quiz.html
@@ -2,96 +2,162 @@
 <html>
 
 <head>
-	<!-- Required meta tags so the site works on all devices -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<!-- Link to bootstrap css -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	 crossorigin="anonymous">
-	<!-- Link to google fonts -- change this if you are linking different fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!-- Required meta tags so the site works on all devices -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Link to bootstrap css -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Link to google fonts -- change this if you are linking different fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
-	<!-- link to css page -->
-	<link rel="stylesheet" href="main.css">
-	<title>Quiz</title>
+  <!-- link to css page -->
+  <link rel="stylesheet" href="main.css">
+  <title>Quiz</title>
 
 
 </head>
 
 <body>
-	<div>
-		<!-- bootstrap navbar -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Navbar</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+  <div>
+    <!-- bootstrap navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Internet Addiction</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="quiz.html">Quiz<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page3.html">About Me</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+
         </ul>
       </div>
     </nav>
-   
-
-  
-    <h1 id = "quiz-title">Quiz</h1>
-
-<!-- This is the quiz -->
-<form id="quiz" name="quiz">
-  <p>The sky is blue</p>
-  <input type = "radio" id="minecraft" name = "question1" value="Strongly Disagree"> Strongly Disagree<br>
-  <input type = "radio" id="minecraft" name = "question1" value="Disagree"> Disagree<br>
-  <input type = "radio" id="minecraft" name = "question1" value="No Opinion"> No opinion<br>
-  <input type = "radio" id="minecraft" name = "question1" value="Agree"> Agree<br>
-  <input type = "radio" id="minecraft" name = "question1" value="Strongly Agree"> Strongly Agree<br>
-
-  <p>The sky is blue</p>
-  <input type = "radio" id="minecraft" name = "question2" value="Strongly Disagree"> Strongly Disagree<br>
-  <input type = "radio" id="minecraft" name = "question2" value="Disagree"> Disagree<br>
-  <input type = "radio" id="minecraft" name = "question2" value="No Opinion"> No opinion<br>
-  <input type = "radio" id="minecraft" name = "question2" value="Agreee"> Agree<br>
-  <input type = "radio" id="minecraft" name = "question2" value="Strongly Agree"> Strongly Agree<br>
-
-  <p>The sky is blue</p>
-  <input type = "radio" id="minecraft" name = "question3" value="Strongly Disagree"> Strongly Disagree<br>
-  <input type = "radio" id="minecraft" name = "question3" value="Disagree"> Disagree<br>
-  <input type = "radio" id="minecraft" name = "question3" value="No Opinion"> No opinion<br>
-  <input type = "radio" id="minecraft" name = "question3" value="Agree"> Agree<br>
-  <input type = "radio" id="minecraft" name = "question3" value="Strongly Agree"> Strongly Agree<br>
-
-  <button id = "submit-button" type="button" class="btn btn-primary">Submit</button>
-</form>
-
-<div id="after-submit">
-  <p id = "message"></p>
-  <p id = "number-correct"></p>
-</div>
 
 
-  <!-- Added javascript file to site -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src=script.js></script>
+
+    <h1 id="quiz-title">Am I Addicted?</h1>
+    <p>Please answer all of the questions below by selecting the corresponding bubble. Please note that this quiz is not
+      a substitute for proper diagnosis of addiction.</p>
+    <!-- This is the quiz -->
+    <form id="quiz" name="quiz">
+      <p><strong>1. Has your internet use increased recently (past 12 months)?</strong></p>
+      <input type="radio" class="minecraft" name="question1" value="Strongly Disagree"> Strongly Disagree<br>
+      <input type="radio" class="minecraft" name="question1" value="Disagree"> Disagree<br>
+      <input type="radio" class="minecraft" name="question1" value="Neutral"> Neutral<br>
+      <input type="radio" class="minecraft" name="question1" value="Agree"> Agree<br>
+      <input type="radio" class="minecraft" name="question1" value="Strongly Agree"> Strongly Agree<br>
+
+      <p><br><br><br><br><strong>2. Have you tried to limit internet use, but failed to do so?</strong></p>
+      <input type="radio" class="minecraft" name="question2" value="Strongly Disagree"> Strongly Disagree<br>
+      <input type="radio" class="minecraft" name="question2" value="Disagree"> Disagree<br>
+      <input type="radio" class="minecraft" name="question2" value="Neutral"> Neutral<br>
+      <input type="radio" class="minecraft" name="question2" value="Agreee"> Agree<br>
+      <input type="radio" class="minecraft" name="question2" value="Strongly Agree"> Strongly Agree<br>
+
+      <p><br><br><br><br><strong>3. Is euphoria greater when engaged with internet activities compared to other
+          activites?</strong></p>
+      <input type="radio" class="minecraft" name="question3" value="Strongly Disagree"> Strongly Disagree<br>
+      <input type="radio" class="minecraft" name="question3" value="Disagree"> Disagree<br>
+      <input type="radio" class="minecraft" name="question3" value="Neutral"> Neutral<br>
+      <input type="radio" class="minecraft" name="question3" value="Agree"> Agree<br>
+      <input type="radio" class="minecraft" name="question3" value="Strongly Agree"> Strongly Agree<br>
+
+      <p><br><br><br><br><strong>4. How often do you think about internet related activities?</strong></p>
+      <input type="radio" class="minecraft" name="question4" value="Strongly Disagree"> Never<br>
+      <input type="radio" class="minecraft" name="question4" value="Disagree"> Rarely<br>
+      <input type="radio" class="minecraft" name="question4" value="Neutral"> Sometimes<br>
+      <input type="radio" class="minecraft" name="question4" value="Agree"> Often<br>
+      <input type="radio" class="minecraft" name="question4" value="Strongly Agree"> Always<br>
+
+      <p><br><br><br><br><strong>5. How often do you neglect friends and family in favor of internet related
+          activities?</strong></p>
+      <input type="radio" class="minecraft" name="question5" value="Strongly Disagree"> Never<br>
+      <input type="radio" class="minecraft" name="question5" value="Disagree"> Rarely<br>
+      <input type="radio" class="minecraft" name="question5" value="Neutral"> Sometimes<br>
+      <input type="radio" class="minecraft" name="question5" value="Agree"> Often<br>
+      <input type="radio" class="minecraft" name="question5" value="Strongly Agree"> Always<br>
+
+      <p><br><br><br><br><strong>6. How often do you feel restless/anxious without access to the internet?</strong></p>
+      <input type="radio" class="minecraft" name="question6" value="Strongly Disagree"> Never<br>
+      <input type="radio" class="minecraft" name="question6" value="Disagree"> Rarely<br>
+      <input type="radio" class="minecraft" name="question6" value="Neutral"> Sometimes<br>
+      <input type="radio" class="minecraft" name="question6" value="Agree"> Often<br>
+      <input type="radio" class="minecraft" name="question6" value="Strongly Agree"> Always<br>
+
+      <p><br><br><br><br><strong>7. How often have you lied to spend more time on the internet?</strong></p>
+      <input type="radio" class="minecraft" name="question7" value="Strongly Disagree"> Never<br>
+      <input type="radio" class="minecraft" name="question7" value="Disagree"> Rarely<br>
+      <input type="radio" class="minecraft" name="question7" value="Neutral"> Sometimes<br>
+      <input type="radio" class="minecraft" name="question7" value="Agree"> Often<br>
+      <input type="radio" class="minecraft" name="question7" value="Strongly Agree"> Always<br>
+
+      <p><br><br><br><br><strong>8. Has school/job performance declined after internet use?</strong></p>
+      <input type="radio" class="minecraft" name="question8" value="Strongly Disagree"> Strongly Disagree<br>
+      <input type="radio" class="minecraft" name="question8" value="Disagree"> Disagree<br>
+      <input type="radio" class="minecraft" name="question8" value="Neutral">Neutral<br>
+      <input type="radio" class="minecraft" name="question8" value="Agree"> Agree<br>
+      <input type="radio" class="minecraft" name="question8" value="Strongly Agree"> Strongly Agree<br>
+
+      <p><br><br><br><br><strong>9. How often do you feel guilty, ashamed, anxious, or depressed because of your
+          internet behavior?</strong></p>
+      <input type="radio" class="minecraft" name="question9" value="Strongly Disagree">Never<br>
+      <input type="radio" class="minecraft" name="question9" value="Disagree"> Rarely<br>
+      <input type="radio" class="minecraft" name="question9" value="Neutral">Sometimes<br>
+      <input type="radio" class="minecraft" name="question9" value="Agree"> Often<br>
+      <input type="radio" class="minecraft" name="question9" value="Strongly Agree"> Always<br>
+
+      <p><br><br><br><br><strong>10. Has your sleep pattern changed after internet use?</strong></p>
+      <input type="radio" class="minecraft" name="question10" value="Strongly Disagree">Strongly Disagree<br>
+      <input type="radio" class="minecraft" name="question10" value="Disagree">Disagree<br>
+      <input type="radio" class="minecraft" name="question10" value="Neutral">Neutral<br>
+      <input type="radio" class="minecraft" name="question10" value="Agree">Agree<br>
+      <input type="radio" class="minecraft" name="question10" value="Strongly Agree">Strongly Agree<br>
+
+      <p><br><br><br><br><strong>11. Has there been any physical changes since your internet use (weight loss/gain,
+          carpal tunnel, etc.)?
+          ?</strong></p>
+      <input type="radio" class="minecraft" name="question11" value="Strongly Disagree">Strongly Disagree<br>
+      <input type="radio" class="minecraft" name="question11" value="Disagree">Disagree<br>
+      <input type="radio" class="minecraft" name="question11" value="Neutral">Neutral<br>
+      <input type="radio" class="minecraft" name="question11" value="Agree">Agree<br>
+      <input type="radio" class="minecraft" name="question11" value="Strongly Agree">Strongly Agree<br>
+
+      <p><br><br><br><br><strong>12. Have you lost interest in past non-gaming related activities?</strong></p>
+      <input type="radio" class="minecraft" name="question12" value="Strongly Disagree">Strongly Disagree<br>
+      <input type="radio" class="minecraft" name="question12" value="Disagree">Disagree<br>
+      <input type="radio" class="minecraft" name="question12" value="Neutral">Neutral<br>
+      <input type="radio" class="minecraft" name="question12" value="Agree">Agree<br>
+      <input type="radio" class="minecraft" name="question12" value="Strongly Agree">Strongly Agree<br>
+      <button id="submit-button" type="button" class="btn btn-danger">Submit</button>
+    </form>
+
+    <div id="after-submit">
+      <p id="message"></p>
+      <p id="number-correct"></p>
+    </div>
+
+
+    <!-- Added javascript file to site -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
+    <script src=script.js></script>
 </body>
 
 </html>
