--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
       <!-- added footer (make this go at the bottom of the page in css) -->
-      <footer>References: <br>Demetrovics, Z., Szeredi, B., & Rózsa, S. (2008). The three-factor model of Internet addiction: The development of the<br>Problematic Internet Use Questionnaire. Behavior Research Methods, 40, 563-574.<br>reSTART. “Signs & Symptoms of Internet Gaming Addiction.” ReSTART Life | Treatment for Video Game Addiction, <br>      Internet Addiction, Phone, VR, AR, 3 Mar. 2019, www.netaddictionrecovery.com/the-problem/signs-and-<br>      symptoms.html.<br> </footer>
+      <footer><br><br><br><br><br><br>References: <br>http://demetrovics.hu/dokumentumok/Internet_PIUQ_2008_BRM_PDF.pdf<br>https://www.netaddictionrecovery.com/the-problem/signs-and-symptoms.html<br>https://www.researchgate.net/publication/43531762_The_effects_of_parental_monitoring_and_leisure_boredom_on_adolescents'_Internet_addiction<br>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3217592/ </footer>
 
       <!-- Added javascript file to site -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
