--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-
+<div class = "centered">
 
   <!-- bootstrap navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -53,7 +53,7 @@
           href="https://www.who.int/features/qa/gaming-disorder/en/" target="_blank">WHO (World Health Organization)</a>
         as a legitimate disorder. Although, it is important to keep in mind how addiction is a symptom of a larger
         problem, which commonly includes depression and loneliness. For this website's purposes, we will be defining
-        addiction as such: <br><br> <em> The neglect of past customs and the replacement of an integral aspect of their
+        addiction as such: <br><br> <em> The neglect of past interests and the replacement of an integral aspect of their
           life (connection, feeling of mastery) for priority of internet use.</em></p>
 
       <!-- added a tag on mufti to redirect to redirect.html -->
@@ -105,7 +105,7 @@
             href="https://suicidepreventionlifeline.org/">Suicide Hotline,</a></p>
         <br>
 
-
+      </div>
 
 
 
@@ -122,8 +122,24 @@
 
 
       <!-- added footer (make this go at the bottom of the page in css) -->
-      <footer><br><br><br><br><br><br>References: <br>http://demetrovics.hu/dokumentumok/Internet_PIUQ_2008_BRM_PDF.pdf<br>https://www.netaddictionrecovery.com/the-problem/signs-and-symptoms.html<br>https://www.researchgate.net/publication/43531762_The_effects_of_parental_monitoring_and_leisure_boredom_on_adolescents'_Internet_addiction<br>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3217592/ </footer>
-
+      <div class="references">
+      <h2>References</h2>
+      
+        <p>Zsolt, et al. “The Three-Factor Model of Internet Addiction: The <br>
+            <span class = "hanging">Development of the Problematic Internet Use Questionnaire.” Behavior Research </span><br>
+          <span class = "hanging">Methods, vol. 40, no. 2, 2008, pp. 563–574., doi:10.3758/brm.40.2.563.</span></p>
+        <p>Lam, Lawrence.t. “Parental Mental Health and Internet Addiction in Adolescents.” Internet <br>
+          <span class="hanging">Addiction in Children and Adolescents, 2017, doi:10.1891/9780826133731.0007.</span></p>
+        <p>
+            reSTART. “Signs &amp; Symptoms of Internet Gaming Addiction.” ReSTART Life | Video Game <br>
+            <span class="hanging">Internet Addiction, Phone, VR, AR, 3 Mar. 2019,</span><br>
+           <span class="hanging">www.netaddictionrecovery.com/the-problem/signs-and-symptoms.html.</span>
+         
+        </p>
+        <p>Ma, Hing Keung. “Internet Addiction and Antisocial Internet Behavior of Adolescents.” <br>
+         <span class ="hanging"> The Scientific World JOURNAL, vol. 11, 2011, pp. 2187–2196., </span><br>
+         <span class="hanging">doi:10.1100/2011/308631.</p></span>
+      </div>
       <!-- Added javascript file to site -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
