--- a/page3.html
+++ b/page3.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div>
+  <div class = "centered">
     <!-- bootstrap navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -50,20 +50,24 @@
         <a href=https://bsd405.org/international/about/senior-project/>Senior Project</a> based off the topic of their
           choice, with guidance from mentors and staff. For my project, I wanted to explore internet addiction as I have
           seen many peers struggle with balancing responsibilities like school work with video game and social media use
-          in particular. </p> <p>I wanted to be realistic, there was no way I could cure internet addiction on my own with
+          in particular. </p> <p>I wanted to be realistic, there was no way I could cure internet addiction on my own
+          with
           0 knowledge on addiction. So, I thought a better idea would be to create a website with information about
-          internet addiction and a quiz to see if people exhibit symptoms of internet addiction, so they can get help.</p>
+          internet addiction and a quiz to see if people exhibit symptoms of internet addiction, so they can get help.
+      </p>
       <p>For my project, I needed to learn about addiction so I researched the psychology of it including watching
         podcasts, readings, and a tour at <a href="https://www.netaddictionrecovery.com/">reSTART</a>. With this
         knowledge, I then learned web development through online research including the basics of HTML, CSS, and
-        JavaScript. I created this website from scratch and without the use of third party programs that guide you through
+        JavaScript. I created this website from scratch and without the use of third party programs that guide you
+        through
         the process of making a website.</p>
-      <p>Although, it must be stated that since I am NOT an addiction professional I cannot diagnose anyone. Although, the
+      <p>Although, it must be stated that since I am NOT an addiction professional I cannot diagnose anyone. Although,
+        the
         information in my website is all from profesionals and is cited. </p>
       <p>Thanks</p>
       <p>Contact me through <a href="mailto: hadifmufti2013@gmail.com">email</a>.</p>
     </div>
-
+</div>
 
 
 
