--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div>
+  <div class = "centered"> 
     <!-- bootstrap navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -145,7 +145,7 @@
       <p id="message"></p>
       <p id="number-correct"></p>
     </div>
-
+</div>
 
     <!-- Added javascript file to site -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
