Updated site to 2021 info

--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
   <div class = "centered">
     <!-- bootstrap navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">iAddiction</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,16 +44,7 @@
     </nav>
 
     <div class="about">
-      <p>Hi,<br>my name is Hadif Mufti. I am currently a senior at the International School
-        of Bellevue. As a tradition,
-        all graduating seniors must complete a
-        <a href=https://bsd405.org/international/about/senior-project/>Senior Project</a> based off the topic of their
-          choice, with guidance from mentors and staff. For my project, I wanted to explore internet addiction as I have
-          seen many peers struggle with balancing responsibilities like school work with video game and social media use
-          in particular. </p> <p>I wanted to be realistic, there was no way I could cure internet addiction on my own
-          with
-          0 knowledge on addiction. So, I thought a better idea would be to create a website with information about
-          internet addiction and a quiz to see if people exhibit symptoms of internet addiction, so they can get help.
+      <p>Hi,<br>my name is Hadif Mufti. I am currently a student at the University of Washington. 
       </p>
       <p>For my project, I needed to learn about addiction so I researched the psychology of it including watching
         podcasts, readings, and a tour at <a href="https://www.netaddictionrecovery.com/">reSTART</a>. With this
